--- a/css/style.css
+++ b/css/style.css
@@ -722,6 +722,27 @@ html {
     width: 300px;
 }
 
+.work-span {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    color: #6FCF97;
+    margin-left: 20px;
+    margin-right: -10px;
+    text-align: center;
+    padding-top: 3px;
+    border: 1px dashed #2FD3AE;
+    border-radius: 50%;
+    width: 40px;
+    height: 20px;
+}
+
+.work-span4 {
+    width: 30px;
+}
+
 /* /.work container */
 
 
@@ -860,6 +881,7 @@ html {
     letter-spacing: 0.05em;
     text-transform: uppercase;
     color: #2FD3AE;
+    cursor: pointer;
 }
 
 .all-com {
@@ -958,3 +980,413 @@ html {
 
 
 /*  <!-- /.partnes container --> */
+
+
+
+
+.ABC {
+    height: 245px;
+}
+
+.abc-content {
+    display: flex;
+}
+
+.ABC-ru {
+    display: flex;
+    margin-bottom: 24px;
+}
+
+.span-abc {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #2FD3AE;
+    padding-left: 40px;
+    cursor: pointer;
+}
+
+.letter {
+    text-decoration: none;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 1.9em;
+    text-transform: uppercase;
+    color: #828282;
+}
+
+.ABC-en {
+    display: flex;
+    margin-bottom: 24px;
+}
+
+.ABC-num {
+    display: flex;
+    font-feature-settings: 'pnum'on, 'lnum'on;
+}
+
+.text-abc-cont {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 144px;
+    line-height: 169px;
+    text-transform: uppercase;
+    color: #DBF7F0;
+    display: flex;
+}
+
+/* <!-- /.ABC container --> */
+
+
+.main-menu {
+    margin-bottom: 70px;
+}
+
+.menu-cards {
+    display: flex;
+}
+
+.menu-card1 {
+    padding-top: 35px;
+    padding-left: 25px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    width: 358px;
+    height: 977px;
+    background: #F6FBFA;
+    border-radius: 10px;
+}
+
+.p-card {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 220%;
+    color: #6E7B84;
+    cursor: pointer;
+}
+
+
+.span-card {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 220%;
+    color: #6E7B84;
+    opacity: 0.5;
+    padding-right: 13px;
+}
+
+.all-categ {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 220%;
+    color: #2FD3AE;
+    cursor: pointer;
+}
+
+.all-categ {
+    background: url(../img/arrow-main-menu.svg) left center / 14px 14px no-repeat;
+    padding-left: 20px;
+}
+
+.h3-maun-menu {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    color: #2E3A59;
+    margin-bottom: 33px;
+}
+
+.h3-maun-menu {
+    background: url(../img/pills\ 2.svg) left center / 20px 20px no-repeat;
+    padding-left: 30px;
+
+}
+
+
+.menu-card2 {
+    width: 357px;
+    height: 640px;
+    padding-top: 35px;
+    padding-left: 25px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    background: #F6FBFA;
+    border-radius: 10px;
+    margin-left: 30px;
+}
+
+.h3-card2 {
+    background: url(../img/vitamins\ 2.svg) left center / 20px 20px no-repeat;
+    padding-left: 30px;
+}
+
+
+.menu-card3 {
+    padding-top: 35px;
+    padding-left: 25px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    width: 357px;
+    height: 306px;
+    background: #F6FBFA;
+    border-radius: 10px;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+.h3-card3 {
+    background: url(../img/baby-boy\ 2.svg) left center / 20px 20px no-repeat;
+    padding-left: 30px;
+}
+
+
+.menu-card4 {
+    padding-top: 35px;
+    padding-left: 25px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    width: 357px;
+    height: 306px;
+    background: #F6FBFA;
+    border-radius: 10px;
+    margin-left: 30px;
+}
+
+.h3-card4 {
+    background: url(../img/skin-care\ 2.svg)left center / 20px 20px no-repeat;
+    padding-left: 30px;
+}
+
+.menu-card5 {
+    padding-top: 35px;
+    padding-left: 25px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    width: 357px;
+    height: 306px;
+    background: #F6FBFA;
+    border-radius: 10px;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+.h3-card5 {
+    background: url(../img/first-aid-kit\ 2.svg)left center / 20px 20px no-repeat;
+    padding-left: 30px;
+}
+
+.h3-card6 {
+    background: url(../img/eye\ 2.svg)left center / 20px 20px no-repeat;
+    padding-left: 30px;
+}
+
+.h3-card7 {
+    background: url(../img/washing-hands\ 2.svg) left center / 20px 20px no-repeat;
+    padding-left: 30px;
+}
+
+.h3-card8 {
+    background: url(../img/dog\ 2.svg) left center / 20px 20px no-repeat;
+    padding-left: 30px;
+}
+
+.h3-card9 {
+    background: url(../img/smartwatch\ 2.svg) left center / 20px 20px no-repeat;
+    padding-left: 30px;
+}
+
+/* <!-- /.main-menu container --> */
+
+
+
+
+.blog {
+    margin-bottom: 70px;
+}
+
+.blog-title {
+    display: flex;
+}
+
+.last-notes {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #2FD3AE;
+    padding-top: 15px;
+}
+
+.span-blog {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #2FD3AE;
+    margin-left: 20px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.span-blog {
+    background: url(../img/arrow-main-menu.svg) left center / 14px 14px no-repeat;
+    padding-left: 20px;
+}
+
+.blog-block {
+    display: flex;
+}
+
+.blog-content {
+    width: 358px;
+    height: 374px;
+    margin-right: 30px;
+}
+
+.img-blog {
+    filter: drop-shadow(0px 20px 40px rgba(0, 0, 0, 0.1));
+    border-radius: 5px;
+}
+
+.h4-blog {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    color: #333333;
+    margin-top: 20px;
+}
+
+.p-blog {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #828282;
+    margin-top: 20px;
+}
+
+/* <!-- /.blog container --> */
+
+
+
+.footer {
+    height: 405px;
+    background: linear-gradient(87.45deg, #011D71 0%, #2FD3AE 100%);
+}
+
+.footer-container {
+    display: flex;
+    padding-top: 150px;
+    padding-bottom: 60px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 220%;
+    color: #FFFFFF;
+}
+
+.p-footer-block1 {
+    margin-top: 102px;
+    width: 159px;
+    text-align: left;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    margin-left: 60px;
+}
+
+.footer-block2 {
+    margin-left: 62px;
+}
+
+.p-blok-footer {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 220%;
+    cursor: pointer;
+}
+
+.span-footer {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 220%;
+    opacity: 0.5;
+    margin-right: 10px;
+}
+
+.footer-block3 {
+    margin-left: 62px;
+}
+
+.tel-foot-h2 {
+    color: #FFFFFF;
+}
+
+.tel-foot-p {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 13px;
+    font-feature-settings: 'liga'off, 'kern'off;
+    color: #FFFFFF;
+}
+
+.email-foot {
+    background: url(../img/Message_open.svg) no-repeat left / 24px 24px;
+    margin-bottom: 30px;
+}
+
+.tel-foot {
+    background: url(../img/Phone_duotone.svg) no-repeat left / 24px 24px;
+}
+
+.social-foot {
+    display: flex;
+    margin-top: 60px;
+}
+
+.soc-foot {
+    margin-right: 10px;
+}
+
+.footer-block4 {
+    width: 347px;
+    margin-left: 86px;
+}
+
+.footer-info {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 220%;
+}
+
+/* FOOTER */
