--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
 
 .container {
     width: 90%;
-    max-width: 1512px;
+    max-width: 1580px;
     margin: auto;
 }
 
@@ -271,6 +271,28 @@ html {
 
 .med {
     background: url(../img/smartwatch\ 1.svg) no-repeat left / 20px 20px;
+}
+
+.l :hover {
+    position: relative;
+  
+}
+
+.header-menu {
+    position: absolute; 
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 0px 0px 10px 10px;
+    height: 612px;
+    width: 1520px;
+    /* display: none; */
+    z-index: 1;
+}
+
+
+.header-menu-content {
+    
+    padding: 40px;
 }
 
 /* ./nav-header */
@@ -986,6 +1008,7 @@ html {
 
 .ABC {
     height: 245px;
+    margin-bottom: 70px;
 }
 
 .abc-content {
@@ -1167,7 +1190,7 @@ html {
 }
 
 .h3-card4 {
-    background: url(../img/skin-care\ 2.svg)left center / 20px 20px no-repeat;
+    background: url(../img/skin-care\ 2.svg) left center / 20px 20px no-repeat;
     padding-left: 30px;
 }
 
@@ -1185,12 +1208,12 @@ html {
 }
 
 .h3-card5 {
-    background: url(../img/first-aid-kit\ 2.svg)left center / 20px 20px no-repeat;
+    background: url(../img/first-aid-kit\ 2.svg) left center / 20px 20px no-repeat;
     padding-left: 30px;
 }
 
 .h3-card6 {
-    background: url(../img/eye\ 2.svg)left center / 20px 20px no-repeat;
+    background: url(../img/eye\ 2.svg) left center / 20px 20px no-repeat;
     padding-left: 30px;
 }
 
@@ -1215,7 +1238,7 @@ html {
 
 
 .blog {
-    margin-bottom: 70px;
+    margin-bottom: 180px;
 }
 
 .blog-title {
@@ -1289,8 +1312,89 @@ html {
 
 
 .footer {
-    height: 405px;
+    position: relative;
     background: linear-gradient(87.45deg, #011D71 0%, #2FD3AE 100%);
+}
+
+.los-footer {
+    position: absolute;
+
+    left: 10%;
+    top: -106px;
+    height: 190px;
+    background: #FFFFFF;
+    box-shadow: 0px 20px 50px rgba(145, 176, 187, 0.2);
+    border-radius: 5px;
+}
+
+.los-content {
+    padding-top: 40px;
+    padding-right: 96px;
+    padding-left: 96px;
+    padding-bottom: 40px;
+}
+
+.h3-title-footer {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    color: #394045;
+}
+
+.footer-form {
+    margin-top: 30px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.input-footer {
+    width: 375px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 20px;
+    margin-right: 30px;
+    background: #FFFFFF;
+    border: 1px solid #E7E9EB;
+    border-radius: 30px;
+    outline: none;
+}
+
+.p-footer-form {
+    width: 251px;
+    height: 34px;
+    text-align: justify;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 120%;
+    color: #828282;
+}
+
+.span-footer-input {
+    color: #2FD3AE;
+}
+
+.button-footer {
+    width: 242px;
+    margin-left: 30px;
+    background: #2FD3AE;
+    border: 0;
+    box-shadow: 0px 40px 40px rgba(0, 0, 0, 0.2);
+    border-radius: 50px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    padding: 17px 26px;
+    color: #FFFFFF;
+    cursor: pointer;
 }
 
 .footer-container {
